# flowmind

./: .dockerignore  .env.example  .gitignore  README.md  cliff.toml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3f1b2c4d5e6f_enforce_project_membership_uniqueness.py  7974e835d07f_initial_migration.py  7c926fe0db38_add_llm_chat_sessions.py  8a4d9c2e1f70_sync_task_completion_with_status.py  a7b9c1d3e5f7_add_chat_awaiting_input_pending_question.py  b2c4d6e8f0a1_add_due_reminder_columns.py  b8c0d2e4f6a8_add_agent_undo_batch_columns.py  c0d2e4f6a8b0_add_chat_message_steps.py  (+7 more)
backend/app/: main.py
backend/scripts/: migrate.py
backend/tests/: conftest.py  helpers.py  test_agent_ask_user.py  test_agent_confirm_delete.py  test_agent_idempotent_create.py  test_agent_knowledge_tools.py  test_agent_time_awareness.py  test_agent_undo.py  test_attachments.py  test_auth.py  test_chat_mentions.py  test_comment_mentions.py  test_comments.py  test_cross_project_assistant.py  test_embedding_pipeline.py  test_health.py  test_hybrid_retrieval.py  test_knowledge.py  test_llm_report.py  test_llm_session_isolation.py  test_llm_stream.py  test_multi_assignee.py  test_notifications.py  test_pagination.py  test_project_task_permissions.py  test_split_text.py  test_tasks_crud.py  test_update_service.py  test_user_search.py  test_websocket.py
backend/tests_e2e/: README.md  test_agent_undo_e2e.py  test_due_date_e2e.py  test_notifications_e2e.py  test_task_search_e2e.py  ws_smoke_test.py
(+186 files in other folders)
