[project]
name = "flowmind"
version = "0.1.0"
description = "FlowMind - LLM-powered intelligent task management system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "email-validator>=2.0.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "pgvector>=0.2.0",
    "tiktoken>=0.7.0",
    "markitdown[docx,pdf,pptx,xls,xlsx,audio-transcription]>=0.1",
    "langgraph>=1.0.0",
    "langchain-openai>=0.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*", "scripts*", "tests*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    # FastAPI 惯用法：Depends()/Query() 等调用作为参数默认值
    "B008",
]

[tool.ruff.lint.per-file-ignores]
# 测试环境变量/路径必须在导入 app 之前设置
"tests/conftest.py" = ["E402", "SIM115"]
"tests_e2e/*" = ["E402", "SIM115"]
# lifespan 中的延迟导入（避免循环依赖/加速启动）
"app/main.py" = ["E402"]
